--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.0",
+    "body-parser": "^1.19.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "cookie-parser": "^1.4.4",
@@ -62,6 +63,7 @@
     "terser-webpack-plugin": "1.2.3",
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
+    "utility": "^1.16.1",
     "webpack": "^4.35.3",
     "webpack-dev-server": "^3.7.2",
     "webpack-manifest-plugin": "2.0.4",
