--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
     "utility": "^1.16.1",
+    "uuid": "^3.3.2",
     "webpack": "^4.35.3",
     "webpack-dev-server": "^3.7.2",
     "webpack-manifest-plugin": "2.0.4",
