replace redux by mobx

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "^0.3.1",
     "mini-css-extract-plugin": "0.5.0",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.1",
+    "mobx-react-lite": "^1.4.1",
     "mongoose": "^5.6.4",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -54,10 +57,7 @@
     "react-cookie": "^4.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "redux": "^4.0.4",
-    "redux-saga": "^1.0.5",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
